--- a/FaceAPI.ipynb
+++ b/FaceAPI.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subscription_key = '722d648c11cb49109e7e01cb119e6171'\n",
+    "subscription_key = None\n",
     "assert subscription_key"
    ]
   },
